initial build guide

--- a/3.-want-to-integrate-or-build/3.2-build-guide.md
+++ b/3.-want-to-integrate-or-build/3.2-build-guide.md
@@ -1,3 +1,12 @@
 # Build Guide
 
-<mark style="background-color:orange;">Coming soon!</mark>
+Incognitee is built on the [Integritee Sidechain SDK](https://docs.integritee.network/4-development/4.4-sdk/4.4.1-sidechain-sdk) which allows you to implement any substrate runtime with pallets of your choice or your own making. This runtime will be executed within TEE enclaves, providing a secure and private execution environment for your use case.
+
+Would you like to 
+* check the Incognitee [code on github](https://github.com/integritee-network/worker) and contribute to Incognitee or the Integritee SDK?
+* fork your own sidechain project and implement your [own custom sidechain logic](https://docs.integritee.network/4-development/4.4-sdk/4.4.4-custom-business-logic-stf)?
+
+Please visit the [Integritee SDK docs](https://docs.integritee.network/4-development/4.4-sdk/4.4.1-sidechain-sdk).
+ 
+ 
+
