--- a/3.-want-to-integrate-or-build/3.1-integration-guide.md
+++ b/3.-want-to-integrate-or-build/3.1-integration-guide.md
@@ -14,6 +14,7 @@ yarn add @encointer/worker-api
 node index.js
 ```
 
+index.js:
 ```javascript
 // A simple sample code for common use cases of the Incognitee API
 
