add fetching notes

--- a/3.-want-to-integrate-or-build/3.1-integration-guide.md
+++ b/3.-want-to-integrate-or-build/3.1-integration-guide.md
@@ -2,7 +2,7 @@
 
 We invite wallet teams and dApp devs to integrate with Incognitee to enhance privacy for their users. This guide will help you get started.
 
-## Javascrpt
+## Javascript API
 
 The following sample code shows you how to perform the most common actions using the Incognitee API. 
 
@@ -124,6 +124,32 @@ async function main() {
     )
     console.log("Account's free balance fetched using session proxy: " + res.toHuman().data.free);
 
+    // or we can fetch recent messages and tx history for the account
+    // first we fetch note buckets info:
+    const noteBucketsInfoGetter = await api.noteBucketsInfoGetter(INCOGNITEE_SHARD);
+    const noteBuckets = await noteBucketsInfoGetter.send();
+    const lastBucket = noteBuckets.toHuman().last.index
+  
+    // then we create a reusable getter which we can poll regularly to check for new messages
+    const notesGetter = await api.notesForTrustedGetter(
+        account.address,
+        lastBucket,
+        INCOGNITEE_SHARD,
+        {delegate: delegate}
+    )
+    // send getter each time you want to poll for new messages
+    const notes = await notesGetter.send();
+    console.log("Messages and TX history for account:");
+    for (const note of notes) {
+        if (note.note.isSuccessfulTrustedCall) {
+          const call = api.createType(
+            "IntegriteeTrustedCall",
+            note.note.asSuccessfulTrustedCall,
+          );
+          console.log("Call: ", call.toHuman());
+        }
+    }
+    
     // bye bye
     api.closeWs()
 }
