add Rust API comment

--- a/3.-want-to-integrate-or-build/3.1-integration-guide.md
+++ b/3.-want-to-integrate-or-build/3.1-integration-guide.md
@@ -2,6 +2,10 @@
 
 We invite wallet teams and dApp devs to integrate with Incognitee to enhance privacy for their users. This guide will help you get started.
 
+## Rust API
+
+Please check our [cli client code](https://github.com/integritee-network/worker/tree/master/cli) with many demo scripts to learn how to interact with the Incognitee API using Rust.
+
 ## Javascript API
 
 The following sample code shows you how to perform the most common actions using the Incognitee API. 
