--- a/3.-want-to-integrate-or-build/3.1-integration-guide.md
+++ b/3.-want-to-integrate-or-build/3.1-integration-guide.md
@@ -8,7 +8,7 @@ Please check our [cli client code](https://github.com/integritee-network/worker/
 
 ## Javascript API
 
-The following sample code shows you how to perform the most common actions using the Incognitee API. 
+The following sample code shows you how to perform the most common actions using the Incognitee API. The relevant library comes in typescript, so we encourage you to use typescript even if this example is js. 
 
 To run it, do:
 
